// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Button Clear 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <View
    accessibilityLabel="PRESS HERE"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#EEEEEE",
        "borderRadius": 24,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 6,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#ff9345",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      PRESS HERE
    </Text>
  </View>
</View>
`;

exports[`Storyshots Atoms/Button Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <View
    accessibilityLabel="PRESS HERE"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#EEEEEE",
        "borderColor": "#ff9345",
        "borderRadius": 24,
        "borderWidth": 2,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 6,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#ff9345",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      PRESS HERE
    </Text>
  </View>
</View>
`;

exports[`Storyshots Atoms/Button Outline 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <View
    accessibilityLabel="PRESS HERE"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#EEEEEE",
        "borderColor": "#ff9345",
        "borderRadius": 24,
        "borderWidth": 2,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 6,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#ff9345",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      PRESS HERE
    </Text>
  </View>
</View>
`;
